feat: grades services and evaluator status definition
