# backend/openAPI.yaml
@@ -124,6 +124,8 @@ components:
         project_id:
           type: string
           format: uuid
+        status:
+          type: string
         created_at:
           type: string
           format: dateformat
@@ -538,9 +540,6 @@ paths:
                   cpf:
                     type: string
                     example: "999.999.999-99"
-                  status:
-                    type: string
-                    example: "to_evaluate"
       responses:
         '200':
           description: Returns a JSON containing the created evaluator.
@@ -625,9 +624,6 @@ paths:
                   cpf:
                     type: string
                     example: "999.999.999-99"
-                  status:
-                    type: string
-                    example: "to_evaluate"
       responses:
         '200':
           description: Returns a JSON containing the updated evaluator.
@@ -1283,6 +1279,9 @@ paths:
                     type: string
                     format: uuid
                     example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                  status:
+                    type: string
+                    example: "to_evaluate"
                   created_at:
                     type: string
                     format: dateformat
@@ -1342,6 +1341,9 @@ paths:
                     type: string
                     format: uuid
                     example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                  status:
+                    type: string
+                    example: "to_evaluate"
                   created_at:
                     type: string
                     format: dateformat
@@ -1414,6 +1416,9 @@ paths:
                       type: string
                       format: uuid
                       example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                    status:
+                      type: string
+                      example: "to_evaluate"
                     created_at:
                       type: string
                       format: dateformat
@@ -1439,21 +1444,24 @@ paths:
         content:
           application/json:
             schema:
-              type: array
-              items:
-                type: object
-                properties:
-                  avaliation_id:
-                    type: string
-                    format: uuid
-                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                  question_id:
-                    type: string
-                    format: uuid
-                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                  grade:
-                    type: number
-                    example: 6.0
+              type: object
+              properties:
+                avaliation_id:
+                  type: string
+                  format: uuid
+                  example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                grades:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      question_id:
+                        type: string
+                        format: uuid
+                        example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                      grade:
+                        type: number
+                        example: 6.0
       responses:
         '200':
           description: Returns a JSON containing the created grade set.
@@ -1487,96 +1495,6 @@ paths:
                       type: string
                       format: dateformat
                       example: "2020-07-02T21:57:00.421Z"
-    put:
-      summary: Updates a set of grades.
-      tags:
-        - grades
-      security:
-        - bearerAuth: []
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                type: object
-                properties:
-                  grade_id:
-                    type: string
-                    format: uuid
-                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                  avaliation_id:
-                    type: string
-                    format: uuid
-                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                  question_id:
-                    type: string
-                    format: uuid
-                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                  grade:
-                    type: number
-                    example: 6.0
-      responses:
-        '200':
-          description: Returns a JSON containing the updated grade set.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: string
-                      format: uuid
-                      example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                    avaliation_id:
-                      type: string
-                      format: uuid
-                      example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                    question_id:
-                      type: string
-                      format: uuid
-                      example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                    grade:
-                      type: number
-                      example: 6.0
-                    created_at:
-                      type: string
-                      format: dateformat
-                      example: "2020-07-02T21:57:00.421Z"
-                    updated_at:
-                      type: string
-                      format: dateformat
-                      example: "2020-07-02T21:57:00.421Z"
-        '400':
-          $ref:  '#/components/responses/IncorrectToken'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-  /grades/{id}:
-    delete:
-      summary: Deletes a grade.
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-            format: uuid
-            example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-          required: true
-          description: Grade id to delete it.
-      tags:
-        - grades
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Returns a successfully deleted grade confirmation.
-        '400':
-          $ref:  '#/components/responses/IncorrectToken'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
   /grades/{avaliation_id}:
     get:
       summary: Gets all grades by avaliation id.
