# backend/src/modules/grades/dtos/ICreateGradeRequestDTO.ts
@@ -1,0 +1,7 @@
+export default interface ICreateGradeRequestDTO {
+  avaliation_id: string;
+  grades: {
+    question_id: string;
+    grade: number;
+  }[];
+}
