# backend/src/modules/grades/infra/http/controllers/GradesController.ts
@@ -2,9 +2,7 @@ import { Request, Response } from 'express';
 import { container } from 'tsyringe';
 
 import ListGradesService from '@modules/grades/services/ListGradesService';
-import CreateGradeService from '@modules/grades/services/CreateGradeService';
-import UpdateGradeService from '@modules/grades/services/UpdateGradeService';
-import DeleteGradeService from '@modules/grades/services/DeleteGradeService';
+import CreateGradesService from '@modules/grades/services/CreateGradesService';
 
 export default class GradesController {
   public async show(request: Request, response: Response): Promise<Response> {
@@ -18,36 +16,12 @@ export default class GradesController {
   }
 
   public async create(request: Request, response: Response): Promise<Response> {
-    const { grades } = request.body;
+    const { avaliation_id, grades } = request.body;
 
-    const createGrade = container.resolve(CreateGradeService);
+    const createGrades = container.resolve(CreateGradesService);
 
-    const createdGrade = await createGrade.execute({
-      grades,
-    });
+    const createdGrades = await createGrades.execute({ avaliation_id, grades });
 
-    return response.json(createdGrade);
-  }
-
-  public async update(request: Request, response: Response): Promise<Response> {
-    const { grades } = request.body;
-
-    const updateGrade = container.resolve(UpdateGradeService);
-
-    const updatedGrade = await updateGrade.execute({
-      grades,
-    });
-
-    return response.json(updatedGrade);
-  }
-
-  public async delete(request: Request, response: Response): Promise<Response> {
-    const { id } = request.params;
-
-    const deleteGrade = container.resolve(DeleteGradeService);
-
-    await deleteGrade.execute(id);
-
-    return response.status(200).send();
+    return response.json(createdGrades);
   }
 }
