# backend/src/modules/grades/infra/http/routes/grades.routes.ts
@@ -16,9 +16,9 @@ gradesRouter.post(
   ensureAuthenticated,
   celebrate({
     [Segments.BODY]: {
+      avaliation_id: Joi.string().required(),
       grades: Joi.array().items(
         Joi.object({
-          avaliation_id: Joi.string().required(),
           question_id: Joi.string().required(),
           grade: Joi.number().precision(1),
         }),
@@ -27,25 +27,5 @@ gradesRouter.post(
   }),
   gradesController.create,
 );
-
-gradesRouter.put(
-  '/',
-  ensureAuthenticated,
-  celebrate({
-    [Segments.BODY]: {
-      grades: Joi.array().items(
-        Joi.object({
-          grade_id: Joi.string().required(),
-          avaliation_id: Joi.string().required(),
-          question_id: Joi.string().required(),
-          grade: Joi.number().precision(1),
-        }),
-      ),
-    },
-  }),
-  gradesController.update,
-);
-
-gradesRouter.delete('/:id', ensureAuthenticated, gradesController.delete);
 
 export default gradesRouter;
